Fix segfault when trying to remove a non-subscribed podcast

BUG: 471107